--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Adafruit <info@adafruit.com>
 sentence=This is a library for the Adafruit seesaw helper IC.
 paragraph=This is a library for the Adafruit seesaw helper IC.
 category=Other
-url=https://github.com/EdutechBlocks/Adafruit-seesaw-Library.git
+url=https://github.com/EdutechBlocks/Adafruit-seesaw-Library
 architectures=*
